# QuadProgpp

./: CMakeLists.txt  main.cc  speed_test.cc
include/EigenQP/: EigenQP.h
include/quadprog_eigen/: quadprog_eigen.hh
include/quadprogpp/: QuadProg++.hh
src/EigenQP/: EigenQP.cc
src/quadprog_eigen/: quadprog_eigen.cc
src/quadprogpp/: Array.cc  QuadProg++.cc
